dipoma_temp/project_code/05_monitoring_app/01kube-prometheus/grafana_pub_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: monitoring
  labels:
    app: grafana
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: grafana
  ports:
  - name: grafana-nodeport
    protocol: TCP
    port: 3000        # порт внутри кластера (ClusterIP)
    nodePort: 30030   # порт на узле (доступ: <NodeIP>:30030)
